Add suggestions command

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN=OTU0MjcwNDg1MzY4MTYwMjg2.YjQrpQ.Sx4QhcBl-TGQizx5yvsYEvBfRM4
+TOKEN=OTU0MjcwNDg1MzY4MTYwMjg2.YjQrpQ.bjkXyl2bMwn8rMj2ykiFNwD1N2Q
+APPID = d49d61905af5dd1344233c59afc65a68
