--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "axios": "^0.27.2",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.19"
   }
 }
